--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,7 @@
         <junit.version>5.5.0-M1</junit.version>
         <openjfx.version>11.0.2</openjfx.version>
         <jaxb.version>2.3.2</jaxb.version>
+        <derby.version>10.15.1.3</derby.version>
         <ccsds.version>0.2.0</ccsds.version>
         <!-- Maven plugin versions -->
         <maven.jacoco.version>0.8.2</maven.jacoco.version>
@@ -76,6 +77,7 @@
         <module>eu.dariolucia.reatmetric.api</module>
         <module>eu.dariolucia.reatmetric.processing</module>
         <module>eu.dariolucia.reatmetric.core</module>
+		<module>eu.dariolucia.reatmetric.persist</module>
         <module>eu.dariolucia.reatmetric.ui</module>
     </modules>
 
