--- a/eu.dariolucia.reatmetric.processing/pom.xml
+++ b/eu.dariolucia.reatmetric.processing/pom.xml
@@ -36,6 +36,17 @@
             <version>${jaxb.version}</version>
         </dependency>
         <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js</artifactId>
+            <version>${graalvm.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.graalvm.js</groupId>
+            <artifactId>js-scriptengine</artifactId>
+            <version>${graalvm.version}</version>
+        </dependency>
+        <dependency>
             <groupId>eu.dariolucia.reatmetric</groupId>
             <artifactId>eu.dariolucia.reatmetric.api</artifactId>
             <version>${project.parent.version}</version>
