--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
         <derby.version>10.15.1.3</derby.version>
         <ccsds.version>0.2.0</ccsds.version>
         <jdbc.version>19.3.0.0</jdbc.version>
+        <graalvm.version>19.3.0</graalvm.version>
         <!-- Maven plugin versions -->
         <maven.jacoco.version>0.8.2</maven.jacoco.version>
         <maven.javadoc.version>3.1.0</maven.javadoc.version>
