--- a/pom.xml
+++ b/pom.xml
@@ -79,7 +79,8 @@
         <module>eu.dariolucia.reatmetric.api</module>
         <module>eu.dariolucia.reatmetric.processing</module>
         <module>eu.dariolucia.reatmetric.core</module>
-		<module>eu.dariolucia.reatmetric.persist</module>
+        <module>eu.dariolucia.reatmetric.persist</module>
+        <module>eu.dariolucia.reatmetric.driver.spacecraft</module>
         <module>eu.dariolucia.reatmetric.ui</module>
     </modules>
 
