--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
         <jdbc.version>19.3.0.0</jdbc.version>
         <graalvm.version>19.3.0</graalvm.version>
         <ccsds.version>0.2.0</ccsds.version>
+        <controlsfx.version>11.0.1</controlsfx.version>
         <!-- Maven plugin versions -->
         <maven.jacoco.version>0.8.2</maven.jacoco.version>
         <maven.javadoc.version>3.1.0</maven.javadoc.version>
