Spacecraft driver start (on going)

--- a/pom.xml
+++ b/pom.xml
@@ -62,10 +62,9 @@
         <openjfx.version>11.0.2</openjfx.version>
         <jaxb.version>2.3.2</jaxb.version>
         <derby.version>10.15.1.3</derby.version>
-        <ccsds.version>0.2.0</ccsds.version>
         <jdbc.version>19.3.0.0</jdbc.version>
         <graalvm.version>19.3.0</graalvm.version>
-        <ccsds.version>0.2.1</ccsds.version>
+        <ccsds.version>0.3.0-SNAPSHOT</ccsds.version>
         <controlsfx.version>11.0.1</controlsfx.version>
         <!-- Maven plugin versions -->
         <maven.jacoco.version>0.8.2</maven.jacoco.version>
