--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
         <derby.version>10.15.1.3</derby.version>
         <jdbc.version>19.3.0.0</jdbc.version>
         <graalvm.version>19.3.0</graalvm.version>
-        <ccsds.version>0.3.0-SNAPSHOT</ccsds.version>
+        <ccsds.version>0.3.0</ccsds.version>
         <controlsfx.version>11.0.1</controlsfx.version>
         <!-- Maven plugin versions -->
         <maven.jacoco.version>0.8.2</maven.jacoco.version>
