Automation implementation (completed)

--- a/eu.dariolucia.reatmetric.ui.spacecraft/pom.xml
+++ b/eu.dariolucia.reatmetric.ui.spacecraft/pom.xml
@@ -53,6 +53,11 @@
         </dependency>
         <dependency>
             <groupId>eu.dariolucia.reatmetric</groupId>
+            <artifactId>eu.dariolucia.reatmetric.driver.automation</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>eu.dariolucia.reatmetric</groupId>
             <artifactId>eu.dariolucia.reatmetric.persist</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
