--- a/eu.dariolucia.reatmetric.driver.spacecraft/pom.xml
+++ b/eu.dariolucia.reatmetric.driver.spacecraft/pom.xml
@@ -26,7 +26,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eu.dariolucia.reatmetric.driver.spacecraft</artifactId>
-    <name>REATMETRIC DRIVER - CCSDS/ECSS Spacecraft</name>
+    <name>REATMETRIC DRIVER - CCSDS/ECSS Spacecraft driver</name>
     <description>REATMETRIC driver module for CCSDS/ECSS spacecraft monitoring and control</description>
 
     <dependencies>
