--- a/pom.xml
+++ b/pom.xml
@@ -58,12 +58,13 @@
         <!-- Java version -->
         <java.version>11</java.version>
         <!-- External libraries versions -->
-        <junit.version>5.5.0-M1</junit.version>
+        <junit.version>5.5.2</junit.version>
         <openjfx.version>14.0.1</openjfx.version>
         <jaxb.version>2.3.2</jaxb.version>
         <derby.version>10.15.1.3</derby.version>
         <jdbc.version>19.3.0.0</jdbc.version>
-        <graalvm.version>20.1.0</graalvm.version>
+        <graalvm.version>20.2.0</graalvm.version>
+        <groovy.version>2.5.13</groovy.version>
         <ccsds.version>0.3.3</ccsds.version>
         <controlsfx.version>11.0.1</controlsfx.version>
         <!-- Maven plugin versions -->
@@ -177,13 +178,7 @@
     <dependencies>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>${junit.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
+            <artifactId>junit-jupiter</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
