--- a/eu.dariolucia.reatmetric.remoting.connector/pom.xml
+++ b/eu.dariolucia.reatmetric.remoting.connector/pom.xml
@@ -26,7 +26,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eu.dariolucia.reatmetric.remoting.connector</artifactId>
-    <name>REATMETRIC Remoting Connector</name>
+    <name>REATMETRIC REMOTING CONNECTOR</name>
     <description>REATMETRIC connector module that allows configuration of connections to remote ReatMetric instances</description>
 
     <dependencies>
