--- a/eu.dariolucia.reatmetric.remoting/pom.xml
+++ b/eu.dariolucia.reatmetric.remoting/pom.xml
@@ -26,7 +26,7 @@
 
     <modelVersion>4.0.0</modelVersion>
     <artifactId>eu.dariolucia.reatmetric.remoting</artifactId>
-    <name>REATMETRIC Remoting</name>
+    <name>REATMETRIC REMOTING</name>
     <description>REATMETRIC remoting module based on Java RMI</description>
 
     <dependencies>
