--- a/pom.xml
+++ b/pom.xml
@@ -66,13 +66,18 @@
         <graalvm.version>20.2.0</graalvm.version>
         <groovy.version>2.5.13</groovy.version>
         <jython.version>2.7.2</jython.version>
-        <ccsds.version>0.3.5</ccsds.version>
+        <ccsds.version>0.4.0</ccsds.version>
         <controlsfx.version>11.0.1</controlsfx.version>
+        <usb4java.version>1.3.0</usb4java.version>
+        <jserialcomm.version>2.7.0</jserialcomm.version>
+        <!--
+        <tiwulf.version>0.1</tiwulf.version>
+        -->
         <!-- Maven plugin versions -->
-        <maven.jacoco.version>0.8.2</maven.jacoco.version>
+        <maven.jacoco.version>0.8.5</maven.jacoco.version>
         <maven.javadoc.version>3.1.0</maven.javadoc.version>
         <maven.source.version>3.1.0</maven.source.version>
-        <maven.surefire.version>2.22.2</maven.surefire.version>
+        <maven.surefire.version>3.0.0-M5</maven.surefire.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.gpg.version>1.6</maven.gpg.version>
         <maven.version>2.5</maven.version>
@@ -92,6 +97,7 @@
         <module>eu.dariolucia.reatmetric.driver.spacecraft</module>
         <module>eu.dariolucia.reatmetric.driver.spacecraft.test</module>
         <module>eu.dariolucia.reatmetric.driver.test</module>
+        <module>eu.dariolucia.reatmetric.driver.serial</module>
         <module>eu.dariolucia.reatmetric.ui</module>
         <module>eu.dariolucia.reatmetric.ui.test</module>
         <module>eu.dariolucia.reatmetric.ui.remoting</module>
@@ -123,6 +129,10 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven.surefire.version}</version>
+                <configuration>
+                    <!-- Activate the use of TCP to transmit events to the plugin -->
+                    <forkNode implementation="org.apache.maven.plugin.surefire.extensions.SurefireForkNodeFactory"/>
+                </configuration>
             </plugin>
             <!-- Source JAR -->
             <plugin>
@@ -159,6 +169,7 @@
             </plugin>
             -->
             <!-- JaCoCo -->
+            <!--
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
@@ -169,7 +180,6 @@
                             <goal>prepare-agent</goal>
                         </goals>
                     </execution>
-                    <!-- attached to Maven test phase -->
                     <execution>
                         <id>report</id>
                         <phase>test</phase>
@@ -179,6 +189,7 @@
                     </execution>
                 </executions>
             </plugin>
+            -->
         </plugins>
     </build>
 
