--- a/pom.xml
+++ b/pom.xml
@@ -60,7 +60,7 @@
         <!-- External libraries versions -->
         <junit.version>5.5.2</junit.version>
         <openjfx.version>14.0.1</openjfx.version>
-        <jaxb.version>2.3.2</jaxb.version>
+        <jaxb.version>2.3.1</jaxb.version>
         <derby.version>10.15.1.3</derby.version>
         <jdbc.version>19.3.0.0</jdbc.version>
         <graalvm.version>20.2.0</graalvm.version>
@@ -75,6 +75,7 @@
         -->
         <!-- Maven plugin versions -->
         <maven.jacoco.version>0.8.5</maven.jacoco.version>
+        <maven.jar.version>2.4</maven.jar.version>
         <maven.javadoc.version>3.1.0</maven.javadoc.version>
         <maven.source.version>3.1.0</maven.source.version>
         <maven.surefire.version>3.0.0-M5</maven.surefire.version>
