Updating remoting system to allow working with systems with multiple IP addresses

--- a/eu.dariolucia.reatmetric.remoting.connector/pom.xml
+++ b/eu.dariolucia.reatmetric.remoting.connector/pom.xml
@@ -36,6 +36,11 @@
             <version>${project.parent.version}</version>
         </dependency>
         <dependency>
+            <groupId>eu.dariolucia.reatmetric</groupId>
+            <artifactId>eu.dariolucia.reatmetric.remoting</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.glassfish.jaxb</groupId>
             <artifactId>jaxb-runtime</artifactId>
             <version>${jaxb.version}</version>
