--- a/eu.dariolucia.reatmetric.remoting.test/pom.xml
+++ b/eu.dariolucia.reatmetric.remoting.test/pom.xml
@@ -93,7 +93,7 @@
         </dependency>
         <dependency>
             <groupId>eu.dariolucia.reatmetric</groupId>
-            <artifactId>eu.dariolucia.reatmetric.driver.automation</artifactId>
+            <artifactId>eu.dariolucia.reatmetric.driver.automation.groovy</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
 	    <dependency>
