--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,10 @@
         <module>eu.dariolucia.reatmetric.remoting.spacecraft</module>
         <module>eu.dariolucia.reatmetric.persist</module>
         <module>eu.dariolucia.reatmetric.scheduler</module>
-        <module>eu.dariolucia.reatmetric.driver.automation</module>
+        <module>eu.dariolucia.reatmetric.driver.automation.base</module>
+        <module>eu.dariolucia.reatmetric.driver.automation.groovy</module>
+        <module>eu.dariolucia.reatmetric.driver.automation.js</module>
+        <module>eu.dariolucia.reatmetric.driver.automation.python</module>
         <module>eu.dariolucia.reatmetric.driver.spacecraft</module>
         <module>eu.dariolucia.reatmetric.driver.spacecraft.test</module>
         <module>eu.dariolucia.reatmetric.driver.test</module>
