System of systems test data, update of the README

--- a/eu.dariolucia.reatmetric.driver.test/pom.xml
+++ b/eu.dariolucia.reatmetric.driver.test/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>eu.dariolucia.reatmetric.processing</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
