--- a/eu.dariolucia.reatmetric.remoting.test/pom.xml
+++ b/eu.dariolucia.reatmetric.remoting.test/pom.xml
@@ -126,5 +126,10 @@
             <artifactId>eu.dariolucia.reatmetric.driver.serial</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.dariolucia.reatmetric</groupId>
+            <artifactId>eu.dariolucia.reatmetric.driver.httpserver</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
