--- a/pom.xml
+++ b/pom.xml
@@ -70,6 +70,7 @@
         <controlsfx.version>11.0.1</controlsfx.version>
         <usb4java.version>1.3.0</usb4java.version>
         <jserialcomm.version>2.8.0</jserialcomm.version>
+        <jsonpath.version>2.7.0</jsonpath.version>
         <!--
         <tiwulf.version>0.1</tiwulf.version>
         -->
@@ -103,6 +104,7 @@
         <module>eu.dariolucia.reatmetric.driver.test</module>
         <module>eu.dariolucia.reatmetric.driver.serial</module>
         <module>eu.dariolucia.reatmetric.driver.remote</module>
+        <module>eu.dariolucia.reatmetric.driver.httpserver</module>
         <module>eu.dariolucia.reatmetric.ui</module>
         <module>eu.dariolucia.reatmetric.ui.test</module>
         <module>eu.dariolucia.reatmetric.ui.remoting</module>
