--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,7 @@
         <maven.jar.version>2.4</maven.jar.version>
         <maven.javadoc.version>3.1.0</maven.javadoc.version>
         <maven.source.version>3.1.0</maven.source.version>
+        <maven.assembly.version>2.5.5</maven.assembly.version>
         <maven.surefire.version>3.0.0-M5</maven.surefire.version>
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.gpg.version>1.6</maven.gpg.version>
