--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,8 @@
         <maven.compiler.version>3.8.1</maven.compiler.version>
         <maven.gpg.version>1.6</maven.gpg.version>
         <maven.version>2.5</maven.version>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <modules>
