Use JSON for AND structure definition

--- a/eu.dariolucia.reatmetric.ui/pom.xml
+++ b/eu.dariolucia.reatmetric.ui/pom.xml
@@ -71,6 +71,11 @@
             <artifactId>controlsfx</artifactId>
             <version>${controlsfx.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.jayway.jsonpath</groupId>
+            <artifactId>json-path</artifactId>
+            <version>${jsonpath.version}</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>com.panemu</groupId>
