--- a/eu.dariolucia.reatmetric.ui/pom.xml
+++ b/eu.dariolucia.reatmetric.ui/pom.xml
@@ -63,6 +63,11 @@
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
+            <artifactId>javafx-swing</artifactId>
+            <version>${openjfx.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
             <artifactId>javafx-graphics</artifactId>
             <version>${openjfx.version}</version>
         </dependency>
