Added HTTP driver as bundled driver for spacecraft test configuration

--- a/eu.dariolucia.reatmetric.ui.spacecraft/pom.xml
+++ b/eu.dariolucia.reatmetric.ui.spacecraft/pom.xml
@@ -279,5 +279,10 @@
             <artifactId>eu.dariolucia.reatmetric.processing</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.dariolucia.reatmetric</groupId>
+            <artifactId>eu.dariolucia.reatmetric.driver.httpserver</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 </project>
