--- a/eu.dariolucia.reatmetric.scheduler/pom.xml
+++ b/eu.dariolucia.reatmetric.scheduler/pom.xml
@@ -35,6 +35,11 @@
             <artifactId>eu.dariolucia.reatmetric.api</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.glassfish.jaxb</groupId>
+            <artifactId>jaxb-runtime</artifactId>
+            <version>${jaxb.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
