--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,7 @@
         <module>eu.dariolucia.reatmetric.ui.test</module>
         <module>eu.dariolucia.reatmetric.ui.remoting</module>
         <module>eu.dariolucia.reatmetric.ui.spacecraft</module>
+        <module>eu.dariolucia.reatmetric.ui.socket</module>
     </modules>
 
     <build>
