Integration of eu.dariolucia.jfx.timeline widget for scheduler visualisation

--- a/eu.dariolucia.reatmetric.ui/pom.xml
+++ b/eu.dariolucia.reatmetric.ui/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>json-path</artifactId>
             <version>${jsonpath.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.dariolucia.jfx</groupId>
+            <artifactId>eu.dariolucia.jfx.timeline</artifactId>
+            <version>${timeline.version}</version>
+        </dependency>
         <!--
         <dependency>
             <groupId>com.panemu</groupId>
