--- a/eu.dariolucia.reatmetric.driver.example/pom.xml
+++ b/eu.dariolucia.reatmetric.driver.example/pom.xml
@@ -21,7 +21,7 @@
     <groupId>eu.dariolucia.reatmetric.example</groupId>
     <artifactId>eu.dariolucia.reatmetric.driver.example</artifactId>
     <name>REATMETRIC DRIVER - Example driver</name>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <description>REATMETRIC driver module for documentation purposes</description>
     <packaging>jar</packaging>
 
@@ -58,17 +58,17 @@
         <dependency>
             <groupId>eu.dariolucia.reatmetric</groupId>
             <artifactId>eu.dariolucia.reatmetric.api</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 		<dependency>
             <groupId>eu.dariolucia.reatmetric</groupId>
             <artifactId>eu.dariolucia.reatmetric.core</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
 		<dependency>
             <groupId>eu.dariolucia.reatmetric</groupId>
             <artifactId>eu.dariolucia.reatmetric.processing</artifactId>
-            <version>0.1.0-SNAPSHOT</version>
+            <version>1.0.0</version>
         </dependency>
     </dependencies>
 </project>
