--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 
     <groupId>eu.dariolucia.reatmetric</groupId>
     <artifactId>eu.dariolucia.reatmetric</artifactId>
-    <version>0.1.0-SNAPSHOT</version>
+    <version>1.0.0</version>
     <packaging>pom</packaging>
 
     <name>REATMETRIC</name>
