SNMP driver implementation in progress

--- a/eu.dariolucia.reatmetric.driver.snmp/pom.xml
+++ b/eu.dariolucia.reatmetric.driver.snmp/pom.xml
@@ -45,6 +45,11 @@
             <artifactId>jaxb-runtime</artifactId>
             <version>${jaxb.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.snmp4j</groupId>
+            <artifactId>snmp4j</artifactId>
+            <version>${snmp4j.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
