SNMP driver implementation in progress

--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,7 @@
         <module>eu.dariolucia.reatmetric.driver.httpserver</module>
         <module>eu.dariolucia.reatmetric.driver.socket</module>
         <module>eu.dariolucia.reatmetric.driver.snmp</module>
+        <module>eu.dariolucia.reatmetric.driver.snmp.util</module>
         <module>eu.dariolucia.reatmetric.ui</module>
         <module>eu.dariolucia.reatmetric.ui.test</module>
         <module>eu.dariolucia.reatmetric.ui.remoting</module>
