--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
         <module>eu.dariolucia.reatmetric.ui.remoting</module>
         <module>eu.dariolucia.reatmetric.ui.spacecraft</module>
         <module>eu.dariolucia.reatmetric.ui.socket</module>
+        <module>eu.dariolucia.reatmetric.ui.snmp</module>
         <module>eu.dariolucia.reatmetric.deployment</module>
     </modules>
 
