Added SNMP driver to deployment module

--- a/eu.dariolucia.reatmetric.deployment/pom.xml
+++ b/eu.dariolucia.reatmetric.deployment/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>eu.dariolucia.reatmetric.driver.automation.groovy</artifactId>
             <version>${project.parent.version}</version>
         </dependency>
+        <dependency>
+            <groupId>eu.dariolucia.reatmetric</groupId>
+            <artifactId>eu.dariolucia.reatmetric.driver.snmp</artifactId>
+            <version>${project.parent.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
