--- a/eu.dariolucia.reatmetric.driver.serial/pom.xml
+++ b/eu.dariolucia.reatmetric.driver.serial/pom.xml
@@ -21,7 +21,7 @@
     <parent>
         <groupId>eu.dariolucia.reatmetric</groupId>
         <artifactId>eu.dariolucia.reatmetric</artifactId>
-        <version>1.1.0-SNAPSHOT</version>
+        <version>1.0.2</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
